<?xml version="1.0" encoding="utf-8"?>
<!--app:layoutDescription="@xml/motion_drawer_menu"-->
<org.example.ankodemo.util.DrawerContent
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu"
    android:layout_width="@dimen/drawer_width"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/colorPrimaryDark"
    app:layoutDescription="@xml/motion_drawer_menu"
    >

  <ImageView
      android:id="@+id/logo"
      android:layout_width="100dp"
      android:layout_height="0dp"
      android:layout_marginTop="24dp"
      android:src="@drawable/hello_logo"
      android:adjustViewBounds="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <View
      android:id="@+id/view"
      android:layout_width="100dp"
      android:layout_height="1dp"
      android:layout_marginTop="24dp"
      android:background="#c2c1c1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/logo"
      />

  <TextView
      android:id="@+id/action_tracking"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="24dp"
      android:drawableLeft="@drawable/ic_nav_tracking"
      android:drawablePadding="24dp"
      android:text="@string/action_start_stop"
      android:textColor="#FFF"
      app:fontFamily="sans-serif-smallcaps"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/view"
      />
  <TextView
      android:id="@+id/action_coupons"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:layout_marginStart="16dp"
      android:text="@string/action_coupons"
      app:fontFamily="sans-serif-smallcaps"
      android:drawableLeft="@drawable/ic_nav_coupons"
      android:drawablePadding="24dp"
      android:textColor="#FFF"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/action_tracking"
      />

  <TextView
      android:id="@+id/action_services"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:layout_marginStart="16dp"
      android:drawableLeft="@drawable/ic_nav_service"
      android:drawablePadding="24dp"
      android:text="@string/action_service"
      app:fontFamily="sans-serif-smallcaps"
      android:textColor="#FFF"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/action_coupons"
      />

  <TextView
      android:id="@+id/action_bike_photo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:layout_marginStart="16dp"
      android:text="@string/action_bikephoto"
      app:fontFamily="sans-serif-smallcaps"
      android:textColor="#FFF"
      android:drawableLeft="@drawable/ic_nav_bikephoto"
      android:drawablePadding="24dp"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/action_services"
      />

  <TextView
      android:id="@+id/action_insurance"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:layout_marginStart="16dp"
      android:text="@string/action_insurance"
      app:fontFamily="sans-serif-smallcaps"
      android:drawableLeft="@drawable/ic_nav_insurance"
      android:drawablePadding="24dp"
      android:textColor="#FFF"

      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/action_bike_photo"
      />

  <TextView
      android:id="@+id/action_tutorial"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:layout_marginStart="16dp"
      android:text="@string/action_tutorial"
      app:fontFamily="sans-serif-smallcaps"
      android:drawableLeft="@drawable/ic_info_24dp"
      android:drawablePadding="24dp"
      android:textColor="#FFF"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/action_insurance"
      />
</org.example.ankodemo.util.DrawerContent>
